--- a/java-spring-mvc-lesson-three/src/main/webapp/WEB-INF/views/task_views/product_form.html
+++ b/java-spring-mvc-lesson-three/src/main/webapp/WEB-INF/views/task_views/product_form.html
@@ -21,11 +21,11 @@
                 <input type="text" class="form-control" th:field="*{name}" placeholder="Enter name">
             </div>
             <div class="mb-3">
-                <label>Name</label>
+                <label>Description</label>
                 <input type="text" class="form-control" th:field="*{description}" placeholder="Enter description">
             </div>
             <div class="mb-3">
-                <label>Name</label>
+                <label>Price</label>
                 <input type="text" class="form-control" th:field="*{price}" placeholder="Enter price">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
