--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
@@ -3,11 +3,6 @@
 <head th:replace="fragments/head :: header"/>
 <body>
 
-<!--
-               TODO добавить сортировку по каждому полю
-               TODO (если не успели сдать ДЗ до 30.04 - до занятия) выделить в фрагменты повторяющийся код
--->
-
 <div class="container">
     <div class="col-10 mx-auto mt-3">
         <div class="row">
@@ -31,34 +26,10 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">
-                    <a class="page-link" th:href="@{/product(
-                    page=${products.number + 1},
-                    size=${products.size},
-                    titleFilter=${param.titleFilter},
-                    min=${param.min},
-                    max=${param.max},
-                    sort_field=id)}">id</a>
-                </th>
-                <th scope="col">
-                    <a class="page-link" th:href="@{/product(
-                    page=${products.number + 1},
-                    size=${products.size},
-                    titleFilter=${param.titleFilter},
-                    min=${param.min},
-                    max=${param.max},
-                    sort_field=Title)}">Title</a>
-                </th>
-                <th scope="col">Description</th>
-                <th scope="col">
-                    <a class="page-link" th:href="@{/product(
-                    page=${products.number + 1},
-                    size=${products.size},
-                    titleFilter=${param.titleFilter},
-                    min=${param.min},
-                    max=${param.max},
-                    sort_field=Price)}">Price</a>
-                </th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Id', 'id')">id</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Title', 'title')">Title</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Description', 'description')">Description</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Price', 'price')">Price</th>
                 <th scope="col">Actions</th>
             </tr>
             </thead>
@@ -85,15 +56,16 @@
 
     <div th:if="${products.hasContent()}">
         <nav aria-label="product list">
-            <ul class="pagination justify-content-left">
-                <li th:unless="${products.number == 1}"
-                    class="page-item"><a class="page-link" th:href="@{/product(
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:if="${products.hasPrevious()}">
+                    <a class="page-link" th:href="@{/product(
                     page=${products.number},
                     size=${products.size},
                     titleFilter=${param.titleFilter},
                     min=${param.min},
                     max=${param.max}
-                    )}">Previous</a></li>
+                    )}">Previous</a>
+                </li>
                 <li th:each="num : ${#numbers.sequence(1, products.totalPages)}"
                     class="page-item"
                     th:classappend="${num == products.number + 1} ? 'active'">
@@ -105,39 +77,14 @@
                     max=${param.max}
                     )}">[[${num}]]</a>
                 </li>
-                <li th:unless="${products.number == products.size}"
-                    class="page-item"><a class="page-link" th:href="@{/product(
-                    page=${products.number + 2},
+                <li class="page-item" th:if="${products.hasNext()}">
+                    <a class="page-link" th:href="@{/product(
+                    page=${products.number+2},
                     size=${products.size},
                     titleFilter=${param.titleFilter},
                     min=${param.min},
                     max=${param.max}
-                    )}">Next</a></li>
-            </ul>
-            <ul class="pagination justify-content-right">
-                <li class="page-item"><a class="page-link" th:href="@{/product(
-                    page=1,
-                    size=3,
-                    titleFilter=${param.titleFilter},
-                    min=${param.min},
-                    max=${param.max}
-                    )}">3</a>
-                </li>
-                <li class="page-item"><a class="page-link" th:href="@{/product(
-                    page=1,
-                    size=5,
-                    titleFilter=${param.titleFilter},
-                    min=${param.min},
-                    max=${param.max}
-                    )}">5</a>
-                </li>
-                <li class="page-item"><a class="page-link" th:href="@{/product(
-                    page=1,
-                    size=10,
-                    titleFilter=${param.titleFilter},
-                    min=${param.min},
-                    max=${param.max}
-                    )}">10</a>
+                    )}">Next</a>
                 </li>
             </ul>
         </nav>
