--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/not_found.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/not_found.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: header"/>
 <body>
-
+<head th:replace="fragments/head :: navbar"/>
 <div class="container">
     <section class="error-container text-center">
         <h1>404</h1>
