--- a/java-spring-boot-lesson-four/src/main/resources/templates/fragments/head.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/fragments/head.html
@@ -1,4 +1,7 @@
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head th:fragment="header">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,3 +12,31 @@
     <title>EShop Application</title>
 </head>
 </html>
+
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand px-10" href="#">EShop</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/product}">Products <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/user}">Users</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-2">
+        <form sec:authoroze="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
+            <button class="btn btn-outline-success">
+                Logout <span sec:authentication="principal.username"></span>
+            </button>
+        </form>
+    </div>
+
+</nav>
