--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: header"/>
 <body>
-
+<head th:replace="fragments/head :: navbar"/>
 <div class="container">
     <div class="col-10 mx-auto mt-3">
         <div class="row">
