--- a/java-spring-boot-lesson-four/src/main/resources/templates/user_views/user.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/user_views/user.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: header"/>
 <body>
-
+<head th:replace="fragments/head :: navbar"/>
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
