--- a/java-spring-boot-lesson-four/src/main/resources/templates/user_views/user_form.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/user_views/user_form.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: header"/>
 <body>
-
+<head th:replace="fragments/head :: navbar"/>
 <div class="container">
     <div class="col-10 mx-auto">
         <h1>Edit user</h1>
