--- a/java-spring-boot-lesson-four/src/main/resources/templates/fragments/head.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/fragments/head.html
@@ -31,6 +31,11 @@
         </ul>
     </div>
 
+    <div class="col-4">
+        <a class="btn btn-success" th:href="@{/cart}"><i
+                class="fas fa-shopping-cart"></i></a>
+    </div>
+
     <div class="col-2">
         <form sec:authoroze="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
             <button class="btn btn-outline-success">
