--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
@@ -44,6 +44,8 @@
                             class="fas fa-edit"></i></a>
                     <a class="btn btn-danger" th:href="@{/product/delete/{id}(id = ${product.id})}">
                         <i class="far fa-trash-alt"></i></a>
+                    <a sec:authoroze="isAuthenticated()" class="btn btn-success" th:href="@{/product/add/{id}(id = ${product.id})}">
+                        <i class="fas fa-plus"></i></a>
                 </th>
             </tr>
 
